--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
             <div class="mb-4">
                 <h3 class="text-lg font-medium">趣站推荐</h3>
                      <div class="links">
-                     <a href="https://ciliduo-web.github.io/" >磁力多 | </a>
-                     <a href="https://cilixingqiu-web.github.io/" >磁力星球 | </a>
-                     <a href="https://btsow-web.github.io/" >btsow | </a>
-                     <a href="https://zzb06-web.github.io/" >种子吧 | </a>
-                     <a href="https://24h搜书网-web.github.io/" >24h搜书网 </a>
+                     <a href="https://123kzb-web.github.io/" >极直播 | </a>
+                     <a href="https://2rk-web.github.io/" >二矿动漫 | </a>
+                     <a href="https://polarrcolormatch-web.github.io/" >Polarr ColorMatch | </a>
+                     <a href="https://cilise-web.github.io/" >磁力搜索 | </a>
+                     <a href="https://24hbook-urls.github.io/" >24h搜书 </a>
                      </div> 
             </div>
             <p class="text-sm">© 2025 24h搜书网 数字指南</p>
