--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <p class="text-xl md:text-2xl max-w-3xl mx-auto opacity-90">基于IPFS技术的免费电子书搜索和下载</p>
                 <div class="mt-8 flex flex-col md:flex-row justify-center space-y-4 md:space-y-0 md:space-x-6">
                     <a class="bg-white text-indigo-600 hover:bg-gray-100 hover:scale-105 transition-transform font-medium py-3 px-6 rounded-lg shadow-lg"
-                        href="https://www.ggonav.com/sites/684.html" target="_blank">
+                        href="https://www.imi123.cn/sites/684.html" target="_blank">
                         <i class="fas fa-external-link-alt mr-2"></i>访问官网
                     </a>
                     <a class="bg-white text-indigo-600 hover:bg-gray-100 hover:scale-105 transition-transform font-medium py-3 px-6 rounded-lg shadow-lg"
-                        href="https://www.ggonav.com/sites/5660.html" target="_blank">
+                        href="https://www.imi123.cn/sites/503.html" target="_blank">
                         <i class="fas fa-external-link-alt mr-2"></i>电子书网站推荐
                     </a>
  <a class="bg-white text-indigo-600 hover:bg-gray-100 hover:scale-105 transition-transform font-medium py-3 px-6 rounded-lg shadow-lg"
